# pyrealb

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pyrealb-en-jupyter.html  pyrealb-en-jupyter.py  pyrealb-en.ipynb  requirements.txt  setup.cfg
IDE/: README.html  README.rst  context.py  ide.py  ppJson.py
Notebooks/: pyrealb-en.ipynb  pyrealb-fr.ipynb
demos/: README.md
demos/99bottlesofbeer/: 99bottlesofbeer.py  context.py
demos/Bilinguo/: bilinguo.py  sentences.py
docs/: ClassOrganisation.md  Hacking-pyrealb.html  Hacking-pyrealb.md  Lexicon-Format-en.html  Lexicon-Format-en.md  Lexicon-Format-fr.html  Lexicon-Format-fr.md  Makefile  README.md  Realizer-Architecture.html  Realizer-Architecture.md  __init__.py  documentation.html  documentation.py  user.js  userinfos.py
pyrealb/: Lexicon.py  README.md  Warning.py  pyrealb.py  setup.cfg
tests/: Bonfante_dependances.py  Bonfante_examples.py  README.md  conjugation_en.py  conjugation_fr.py  context.py  dates_en.py  dates_fr.py  declension_en.py  declension_fr.py  dependencies_en.py  dependencies_fr.py  elision_en.py  elision_fr.py  examples_en.py  exemples_fr.py  interrogative_en.py  json_tests.py  numbers_en.py  numbers_fr.py  ppJson.py  pronouns_en.py  pronouns_fr.py  realPro_dep_en.py  sentences_en.py  sentences_fr.py  test.py  testAll.py  test_all.sh  test_bonfante_en_ex.py  test_bonfante_fr_ex.py  test_conjugation_en.py  test_conjugation_fr.py  test_dates_en.py  test_dates_fr.py  test_declension_en.py  test_declension_fr.py  test_dependencies_en.py  test_dependencies_fr.py  test_elision_en.py  (+12 more)
(+353 files in other folders)
